# bukti

./: .env.example  .gitignore  CLOUDFLARE.md  Cargo.toml  DEPLOYMENTS.md  PITCH.md  README.md  SUBMISSION.md  batch.json  swaps-seed1.json  swaps-seed2.json  swaps-seed3.json  swaps.json
bot/: README.md  package-lock.json  package.json
bot/src/: core.ts  discord.ts  telegram.ts  test-core.ts
contracts/script/: Deploy.s.sol  DeployAllocator.s.sol  DeployValidator.s.sol
contracts/src/: BuktiAllocator.sol  BuktiAttestation.sol  BuktiFullProof.sol  BuktiProvenance.sol  BuktiValidator.sol  GatedVault.sol  ReferenceValidationRegistry.sol
contracts/test/: BuktiAllocator.t.sol  BuktiAttestation.t.sol  BuktiFullProof.t.sol  BuktiProvenance.t.sol  BuktiValidator.t.sol
docs/: BUSINESS.md  DESIGN-BRIEF.md  INTEGRATION.md  JUDGE-RUNTHROUGH.md  MCP.md  ROADMAP.md
indexer/: batch-state.json  clawhack-cohort.json  clawhack-state.json  mark-to-market-report.json  package-lock.json  package.json  wash-sybil-report.json
indexer/src/: batch-index.ts  config.ts  diag.ts  discover-wide.ts  discover.ts  findblocks.ts  full-witness.ts  funder-graph.ts  header-hash.ts  identity-bind.ts  index-wide.ts  index.ts  log-inclusion.ts  make-board-data.ts  mark-to-market.ts  ping.ts  price-guard.ts  qa-board.ts  qa-completeness.ts  qa-consistency.ts  qa-live.ts  qa-pricing.ts  receipt-trie.ts  scan-clawhack.ts  split-batch.ts  swaps-root.ts  wash-sybil.ts
lib/: Cargo.toml
lib/src/: lib.rs
mcp/: package-lock.json  package.json
program/: Cargo.toml
program-full/: Cargo.toml
program-prov/: Cargo.toml
prov-lib/: Cargo.toml
provenance/: README.md
provenance/check-trie/: Cargo.toml
provenance/check-trie/src/: main.rs
provenance/log-proof/: Cargo.toml  README.md
provenance/log-proof/src/: lib.rs
provenance/log-proof/testdata/: full-input.json  inclusion.json
provenance/log-proof/tests/: inclusion.rs
provenance/pyth-vaa/: Cargo.toml  README.md
provenance/pyth-vaa/src/: lib.rs
provenance/pyth-vaa/testdata/: eth-update.json
provenance/pyth-vaa/tests/: verify.rs
script/: Cargo.toml  build.rs
web/: .gitignore  open-next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  wrangler.jsonc
(+41 files in other folders)
