# ISOLATED workspace — NOT part of the main bukti workspace, so the MPT/keccak deps can never
# change the deployed program vkey. When proven out it folds into lib/program behind SP1's
# keccak precompile.
[package]
name = "mantle-log-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[workspace]
