# ISOLATED workspace — NOT part of the main bukti workspace. Developed here so adding k256 /
# keccak deps can never change the deployed batch program's vkey. When the verifier is proven
# out, it moves into `lib`/`program` behind SP1's secp256k1+keccak precompiles.
[package]
name = "pyth-vaa-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[workspace]
